# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Tue Jul 26 2016 Sjoerd Mullender <sjoerd@acm.org>
- BATattach now can also create a str BAT from a file consisting of
  null-terminated strings.  The input file must be encoded using UTF-8.
- BATattach now copies the input file instead of "stealing" it.
- Removed the lastused "timestamp" from the BBP.
- Removed batStamp field from BAT descriptor, and removed the BBPcurstamp
  function.

* Fri Jul 22 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed unused functions BBPhot and BBPcold.

* Wed Jul  6 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed BATderiveTailProps and BATderiveProps.  Just set the properties
  you know about, or use BATsettrivprop.

* Fri Jul  1 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed the macro BUNfirst.  It can be replaced by 0.

* Wed Jun 29 2016 Sjoerd Mullender <sjoerd@acm.org>
- Changed BATroles by removing the argument to set the name of the
  head column.
- The head column is now completely gone.  MonetDB is completely
  "headless".
- The format of the BBP.dir file was simplified.  Since the head column
  is VOID, the only value that needs to be stored is the head seqbase.

* Tue Jun 28 2016 Sjoerd Mullender <sjoerd@acm.org>
- BATs now only have a single (logical) name.
- The function BATmirror is gone.  The HEAD column is always VOID (with
  a non-nil seqbase) and the TAIL column carries the data.  All functions
  that deal with data work on the TAIL column.

* Mon Jun 27 2016 Sjoerd Mullender <sjoerd@acm.org>
- BATkey now works on the TAIL column instead of the HEAD column.
- Replaced BATseqbase with BAThseqbase and BATtseqbase, the former for
  setting the seqbase on the HEAD, the latter for setting the seqbase
  on the TAIL.

* Fri Jun 24 2016 Sjoerd Mullender <sjoerd@acm.org>
- Replaced function BATnew with COLnew with slightly different arguments:
  the first argument of COLnew is the SEQBASE of the head column (which
  is always VOID).
