@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Wed Sep 14 2016 Sjoerd Mullender <sjoerd@acm.org>
+- VALcopy and VALinit both return their first argument on success or
+  (and that's new) NULL on (allocation) failure.
+
 * Tue Jul 26 2016 Sjoerd Mullender <sjoerd@acm.org>
 - BATattach now can also create a str BAT from a file consisting of
   null-terminated strings.  The input file must be encoded using UTF-8.
